WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264552
[WebGPU] webgpu:api,operation,resource_init,* does not pass
https://bugs.webkit.org/show_bug.cgi?id=264552
Summary
[WebGPU] webgpu:api,operation,resource_init,* does not pass
Mike Wyrzykowski
Reported
2023-11-09 21:55:11 PST
[WebGPU] webgpu:api,operation,resource_init,* does not pass I think there is one failing test in partial buffer to texture copy of all the test cases
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-09 21:55:28 PST
<
rdar://problem/118217988
>
Mike Wyrzykowski
Comment 2
2024-01-04 13:14:52 PST
***
Bug 267094
has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 3
2024-01-04 14:02:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22397
EWS
Comment 4
2024-01-05 18:57:50 PST
Committed
272721@main
(a33ef31297cf): <
https://commits.webkit.org/272721@main
> Reviewed commits have been landed. Closing PR #22397 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug