[WebGPU] webgpu:api,operation,resource_init,* does not pass https://bugs.webkit.org/show_bug.cgi?id=264552 <radar://118217988>

Reviewed by Tadeu Zagallo.

Correct how textures are cleared when attempting to load contents which
were not previously written, which gets all of resource_init,* passing.

* LayoutTests/http/tests/webgpu/webgpu/api/operation/resource_init/buffer-expected.txt:
Add passing expectations.

* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::loadAction):
(WebGPU::storeAction):
(WebGPU::createSimplePso):
(WebGPU::CommandEncoder::runClearEncoder):
(WebGPU::CommandEncoder::beginRenderPass):
(WebGPU::CommandEncoder::finish):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::endPass):

Canonical link: https://commits.webkit.org/272721@main